--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "electron-packager . organizer --platform=win32 --arch=x64 --overwrite"
   },
   "dependencies": {
-    "electron": "^11.2.3"
+    "electron": "^11.2.3",
+    "jquery": "^3.5.1"
   }
 }
